Fix display name misalignments in detailed statuses

--- a/app/javascript/flavours/glitch/styles/components/drawer.scss
+++ b/app/javascript/flavours/glitch/styles/components/drawer.scss
@@ -168,6 +168,7 @@
   & > a {
     color: inherit;
     text-decoration: none;
+    line-height: 20px;
   }
 
   & > .avatar {
